<resources>
    <string name="app_name">タスク管理アプリ</string>
    <string name="action_settings">Settings</string>
    <string name="msg">カテゴリ検索ワードを入力して下さい</string>
    <string name="category">カテゴリ</string>
    <string name="category_input">選択入力</string>
    <string name="title">タイトル</string>
    <string name="content">内容</string>
    <string name="done_button">決定</string>
    <string name="date_text">日付設定</string>
    <string name="time_text">時刻設定</string>
    <string name="spinner_title">カテゴリ選択</string>
    <string name="category_all_text">全件表示</string>
    <string name="all_delete_text">全件削除</string>
</resources>
