<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_all_button"
            android:textSize="18sp"
            android:text="@string/category_all_text"
            android:layout_marginLeft="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_title"
            android:id="@+id/spinner_button"
            android:textSize="18sp"
            android:layout_below="@id/category_all_button"
            android:layout_marginLeft="5dp"/>

<!--        Buttonと重ねてSpinnerを配置。ユーザからはButtonしか見えない。-->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner0"
            android:paddingLeft="30dp"
            android:paddingRight="60dp"
            android:layout_below="@id/category_all_button"
            android:spinnerMode="dropdown"/>

        </RelativeLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_delete_text"
            android:textSize="18sp"
            android:layout_weight="0.25"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/delete_all_button"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="101dp"
        android:id="@+id/parting_line"/>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView1"
        android:layout_marginTop="102dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/plus"
        app:backgroundTint="@color/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>